fix hill z-index

--- a/public/css/index.less
+++ b/public/css/index.less
@@ -463,6 +463,7 @@ section {
 
 .hillholder {
   position: relative;
+  z-index: 100;
 }
 
 .faq {
@@ -848,7 +849,7 @@ footer p {
     left: 70%;
     top: -319px;
     position: absolute;
-    z-index: 3000;
+    z-index: 100;
   }
 
   .clockWindow {
